Try to prevent text scaling in landscape mode on mobile

--- a/style/main2.css
+++ b/style/main2.css
@@ -56,6 +56,7 @@
 }
 
 html {
+    -webkit-text-size-adjust: 100%;
     font-family: 'EBG12-Re', Georgia, serif;
     -moz-font-feature-settings: "liga", "calt", "xtex";
     -webkit-font-feature-settings: "liga", "calt", "xtex";
